    to load a page!
 * This all-but deprecates generate_static!

2007-12-12 tdb
 * 'x' and 'y' values will now sort correctly (along with ~n, 'e etc.), fixing
    #2944
 * Changed is_dom back to not use ->isa, due to inheritance problems in
    trim_whitespace under LibXML, fixing #3159

2007-12-13 cjg
 * Added first cut of AjaxSubject which dynamically loads subsections when
    selecting subjects in the deposit workflow. Comes with a cjg script to
    provide the subsections. Still needs some work. for #2857

2007-12-13 cjg
 * Templates are now reloaded if they have been modified since they were
    loaded. Closes #3163

2007-12-13 cjg
 * Added QA Screen. This will show the planned QA plugins. Closes #3167

2007-12-14 tdb
 * The main repository hostname can now be unqualified (to allow 'localhost'),
    fixing #3184
 * Added action for staff to eprint actions menu to reindex an eprint

2007-12-17 cjg
 * Changed Items and Review screens to use an icon to view the eprint rather
    than hyperlinking the text.
 * Fixed bug introduced in r3149 which lost the colour on rows in Items.

2007-12-17 tdb
 * Removed backwards compatibility stuff from LibXML - we need 1.63 which has
    all the fixes in anyway.
 * Fixed compatibility problem with IE in jscss.js, fixing #3164

2007-12-17 cjg
 * Phrase files now dynamically reload if they have changed, but this won't
    handle phrases being moved between phrase files. eg. from system.xml
    to repository specific.
	
2007-12-17 cjg
 * Small change to previous commit to make it use a more generic name for
    the hash which tracks which config file mtimes have been checked.

2007-12-17 cjg
 * If root database connect fails, in epadmin, it offers you the option to
    try again, rather than instantly exiting. Closes #2807

2007-12-17 cjg
 * epadmin now generates a random 8 character database password as the 
    default value when configuring the database for a repository, although
    this may still be over-ridden.